--- a/mall/mall-portal/src/main/resources/application-dev.yml
+++ b/mall/mall-portal/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
     url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
     username: root
 #    password: root
-    password:
+    password: root
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
